# vision-rd

./: .gitignore  CONTRIBUTING.md  CR.md  Makefile  README.md  new_frame_combine.ipynb  papers.csv  pdfs.dvc  pyproject.toml  run_predictions.py
.dvc/: config
evaluation/: README.md  (+8 more)
experiments/data-quality/frame-level/: Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
experiments/data-quality/frame-level/.dvc/: config
experiments/data-quality/frame-level/scripts/: build_fiftyone.py  export_review.py  launch_fiftyone.py  predict.py  prepare.py  validate_review.py
experiments/data-quality/frame-level/src/data_quality_frame_level/: __init__.py  dataset.py  fiftyone_build.py  inference.py  review.py
experiments/data-quality/frame-level/tests/: test_dataset.py  test_review.py
experiments/data-quality/sequential/: .dvcignore  .gitignore  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
experiments/data-quality/sequential/.dvc/: config
experiments/data-quality/sequential/scripts/: build_fiftyone.py  build_review_sets.py  launch_fiftyone.py  predict.py
experiments/data-quality/sequential/src/data_quality_sequential/: dataset.py  registry.py  review.py
experiments/data-quality/sequential/tests/: test_dataset.py  test_registry.py  test_review.py  test_smoke.py
experiments/template/: Makefile  README.md  dvc.yaml  pyproject.toml
experiments/template/.dvc/: config
experiments/temporal-models/pyro-detector-baseline/: Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
experiments/temporal-models/pyro-detector-baseline/.dvc/: config
experiments/temporal-models/pyro-detector-baseline/scripts/: evaluate.py  infer.py  package.py  predict.py  prepare.py  sweep.py
experiments/temporal-models/pyro-detector-baseline/src/pyro_detector_baseline/: data.py  evaluator.py  model.py  package.py  predictor_wrapper.py
experiments/temporal-models/pyro-detector-baseline/tests/: test_data.py  test_evaluator.py  test_model.py  test_package.py  test_predictor_wrapper.py
experiments/temporal-models/smokeynet-adapted/: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
experiments/temporal-models/smokeynet-adapted/.dvc/: config
experiments/temporal-models/smokeynet-adapted/data/08_reporting/: comparison.md
experiments/temporal-models/smokeynet-adapted/docs/plans/: 2026-04-14-basic-temporal-model-plan.md  2026-04-14-performance-improvements-plan.md  2026-04-14-render-tubes.md  2026-04-14-smoke-tube-dataset.md  2026-04-14-training-augmentation-plan.md  2026-04-15-temporal-model-protocol-plan.md
experiments/temporal-models/smokeynet-adapted/docs/specs/: 2026-04-14-basic-temporal-model-design.md  2026-04-14-per-run-training-curves-design.md  2026-04-14-smoke-tube-dataset-design.md  2026-04-14-training-augmentation-design.md
experiments/temporal-models/smokeynet-adapted/notebooks/: 01-visualize-smoke-tubes.ipynb  02-visualize-built-tubes.ipynb  03-visualize-augment-transforms.ipynb
experiments/temporal-models/smokeynet-adapted/scripts/: evaluate.py  extract_features.py  package.py  plot_training.py  prepare.py  render_tubes.py  train.py  visualize_augment.py
experiments/temporal-models/smokeynet-adapted/src/smokeynet_adapted/: augment.py  backbone.py  batch_samples.py  data.py  dataset.py  detector.py  heads.py  inference.py  lit_temporal.py  model.py  net.py  package.py  spatial_attention.py  temporal_classifier.py  temporal_fusion.py  training.py  training_plots.py  tube_viz.py  tubes.py  types.py  val_predict.py
experiments/temporal-models/smokeynet-adapted/tests/: test_augment.py  test_backbone.py  test_batch_samples.py  test_calibration.py  test_compare_variants.py  test_data.py  test_dataset.py  test_detector.py  test_heads.py  test_inference_units.py  test_lit_temporal.py  test_model.py  test_model_edge_cases.py  test_net.py  test_package.py  test_spatial_attention.py  test_temporal_classifier.py  test_temporal_fusion.py  test_training.py  test_training_plots.py  test_tubes.py  test_types.py
experiments/temporal-models/temporal-model-leaderboard/: .gitignore  Makefile  README.md  dvc.yaml  pyproject.toml
experiments/temporal-models/temporal-model-leaderboard/.dvc/: config
experiments/temporal-models/temporal-model-leaderboard/data/01_raw/: .gitignore  sequential_test.dvc
experiments/temporal-models/temporal-model-leaderboard/data/07_model_output/: .gitignore
experiments/temporal-models/temporal-model-leaderboard/scripts/: build_fiftyone_errors.py  evaluate.py  evaluate_pyro_annotator_export.py  launch_fiftyone.py  leaderboard.py
experiments/temporal-models/temporal-model-leaderboard/tests/: test_dataset.py  test_leaderboard.py  test_metrics.py  test_runner.py
experiments/temporal-models/tracking-fsm-baseline/: .gitignore  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
experiments/temporal-models/tracking-fsm-baseline/scripts/: ablation.py  build_fiftyone_dataset.py  evaluate.py  infer.py  package.py  pad_sequences.py  prepare.py  sweep.py  track.py
experiments/temporal-models/tracking-fsm-baseline/tests/: test_data.py  test_evaluator.py  test_model.py  test_package.py  test_tracker.py
experiments/tracking-fsm-baseline/: .gitignore  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
experiments/tracking-fsm-baseline/.dvc/: config
experiments/tracking-fsm-baseline/data/: .gitignore
experiments/tracking-fsm-baseline/data/01_raw/: .gitignore  train.dvc  wf_registry.json.dvc
experiments/tracking-fsm-baseline/scripts/: ablation.py  build_fiftyone_dataset.py  evaluate.py  infer.py  launch_fiftyone.py  package.py  pad_sequences.py  prepare.py  sweep.py  track.py  visualize_mispredictions.py
experiments/tracking-fsm-baseline/src/: data.py  detector.py  evaluator.py  model.py  package.py  tracker.py  types.py  visualization.py
experiments/tracking-fsm-baseline/tests/: test_data.py  test_evaluator.py  test_model.py  test_package.py  test_tracker.py
lib/pyrocore/: README.md  pyproject.toml
lib/pyrocore/src/pyrocore/: __init__.py  model.py  types.py
lib/pyrocore/tests/: test_model.py
(+384 files in other folders)
