[project]
name = "project-name"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "dvc[s3]>=3.56",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
