[project]
name = "project-name"
version = "0.1.0"
description = "Experiment template"
requires-python = ">=3.11"
dependencies = [
    "dvc[s3]>=3.56",
    "pyrocore @ file:///${PROJECT_ROOT}/../../lib/pyrocore",
]

[dependency-groups]
dev = [
    "nbqa>=1.9",
    "nbstripout>=0.8",
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "PLC0415"]

[tool.ruff.format]
quote-style = "double"
