[project]
name = "temporal-model-leaderboard"
version = "0.1.0"
description = "Evaluate and rank temporal smoke detection models on pyro-dataset test set"
requires-python = ">=3.11"
dependencies = [
    "pyrocore",
    "tracking-fsm-baseline",
    "mtb-change-detection",
    "pyro-detector-baseline",
    "bbox-tube-temporal",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
pyrocore = { path = "../../../lib/pyrocore" }
tracking-fsm-baseline = { path = "../tracking-fsm-baseline" }
mtb-change-detection = { path = "../mtb-change-detection" }
pyro-detector-baseline = { path = "../pyro-detector-baseline" }
bbox-tube-temporal = { path = "../bbox-tube-temporal" }

[dependency-groups]
dev = [
    "dvc[s3]>=3.56",
    "pytest>=8.0",
    "ruff>=0.9",
]
explore = [
    "fiftyone>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/temporal_model_leaderboard"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "PLC0415"]

[tool.ruff.format]
quote-style = "double"
